mongo::sbe::value::deserializeValue doesn't initialize value for Nothing type

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      mongo::sbe::value::deserializeValue doesn't initialize value for Nothing type, resulting in nondeterministic value returned. 

      This triggers poison debug assert (false positive) if the value happens to be -1.

            Assignee:
            Anna Wawrzyniak (Inactive)
            Reporter:
            Anna Wawrzyniak (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: