SERVER-81045 Fixed sbe::value::deserializeValue to deterministically initialize Nothing value